cpctf-maint/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpctf-maint
  namespace: cpctf-maint
  labels:
    app: cpctf-maint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpctf-maint
  template:
    metadata:
      labels:
        app: cpctf-maint
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: maintenance-config
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: maintenance-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
      volumes:
        - name: maintenance-config
          configMap:
            name: cpctf-maintenance-page
